# QSimpleUpdater

./: CMakeLists.txt
